--- a/fb.html
+++ b/fb.html
@@ -3,7 +3,7 @@
 <li id="u_0_45">
   <a class="navSubmenu" onclick="$(&quot;u_0_46&quot;).submit()" href="#" role="button">
     <div class="clearfix">
-      <input id="enableBox" class="mrs _s0 _8o lfloat _ohe _ry" type="checkbox" onchange="check('enableBox')">
+      <input id="enableBox" class="lfloat" type="checkbox" onchange="check('enableBox')">
       <div class="clearfix _42ef">
       <div class="navSubmenuName ellipsis">Enable</div>
       </div>
@@ -14,7 +14,7 @@
 <li id="u_0_45">
   <a class="navSubmenu" onclick="$(&quot;u_0_46&quot;).submit()" href="#" role="button">
     <div class="clearfix">
-      <input id="negativeFBox" class="mrs _s0 _8o lfloat _ohe _ry" type="checkbox" onchange="check('negativeFBox')">
+      <input id="negativeFBox" class="lfloat" type="checkbox" onchange="check('negativeFBox')">
       <div class="clearfix _42ef">
       <div class="navSubmenuName ellipsis">Negative Filter</div>
       </div>
@@ -24,7 +24,7 @@
 <li id="u_0_45">
   <a class="navSubmenu" onclick="$(&quot;u_0_46&quot;).submit()" href="#" role="button">
     <div class="clearfix">
-      <input id="customFBox" class="mrs _s0 _8o lfloat _ohe _ry" type="checkbox" onchange="check('customFBox')">
+      <input id="customFBox" class="lfloat" type="checkbox" onchange="check('customFBox')">
       <div class="clearfix _42ef">
       <div class="navSubmenuName ellipsis">Custom Filter</div>
       </div>
@@ -35,7 +35,7 @@
 <li id="u_0_45">
   <a class="navSubmenu" onclick="$(&quot;u_0_46&quot;).submit()" href="#" role="button">
     <div class="clearfix">
-      <input id="debugBox" class="mrs _s0 _8o lfloat _ohe _ry" type="checkbox" onchange="check('debugBox')">
+      <input id="debugBox" class="lfloat" type="checkbox" onchange="check('debugBox')">
       <div class="clearfix _42ef">
       <div class="navSubmenuName ellipsis">Debug</div>
       </div>
